[package]
name = "fiya"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
tokio = {version = "1.32.0", features = ["full"]}
async-trait = "0.1.67"
axum = { version = "0.8.3", features = ["ws"] }
axum-extra = {version = "0.10.1", features = ["cookie", "cookie-private", "typed-header"]}
chrono = { version = "0.4.34", features = ["serde"] }
thiserror = "2.0.12"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.mongodb]
version = "3.2.3"
