[package]
name = "fiya"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
tokio = {version = "1.32.0", features = ["full"]}
async-trait = "0.1.67"
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = {version = "0.9.3", features = ["cookie", "cookie-private", "typed-header"]}
chrono = { version = "0.4.34", features = ["serde"] }
thiserror = "2.0.12"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3.1"
dotenvy = "0.15"
strum = "0.27.1"
strum_macros = "0.27.1"
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.15.1"
rand = "0.9.0"
time = "0.3.41"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.3"
uuid = { version = "1.13.2", features = ["v4"]}

[dependencies.mongodb]
version = "3.2.3"
